--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div class="container">
         <div class="header">
-            Priyanshu Singh  Reg No. - 22BCE10097
+            Ankit Hazarika  Reg No. - 22BCE10469
         </div>
         <p><b>Ethnus Assignment</b></p>
 
